--- a/styles.css
+++ b/styles.css
@@ -9,18 +9,244 @@
   --primary: #1c303a;
   --secondary: #859a50;
   --accent: #53865d;
+  --article: #fff1bb;
 
   /* Fonts */
   --black-hans: "Black Han Sans", sans-serif;
   --inter: "Inter", sans-serif;
   --nerko-one: "Nerko One", cursive;
   --yellowtail: "Yellowtail", cursive;
+
+  scroll-behavior: smooth;
 }
 
 body {
-  color: var(--primary);
   font-family: var(--inter);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  color: var(--primary);
+}
+
+.roadmap__container {
+  margin: 0 auto;
+  padding-top: 95px;
+  padding-bottom: 254px;
+  width: 375px;
+  height: 600px;
+
+  background-image: url("./images/background-phone.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+}
+
+.roadmap__title {
+  position: relative;
+  font-family: var(--black-hans);
+  font-size: 40px;
   font-weight: 400;
-  font-size: 24px;
-  line-height: 1.2;
+  line-height: 1.25;
+  text-align: center;
+}
+
+.roadmap__title::after {
+  content: "Roadmap";
+  position: absolute;
+  z-index: -1;
+  top: -53px;
+  left: 50%;
+
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  transform: translateX(-50%);
+
+  font-family: var(--yellowtail);
+  font-size: 80px;
+  line-height: 106.7%;
+  text-align: center;
+
+  color: var(--secondary);
+
+  -webkit-opacity: 0.2;
+  opacity: 0.2;
+}
+
+.roadmap__slider {
+  margin-top: 38px;
+  padding-left: 100px;
+  padding-right: 100px;
+  width: 100%;
+  height: 258.7px;
+
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-align-items: center;
+  align-items: center;
+
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+
+  gap: 123px;
+
+  overflow-x: auto;
+  overflow-y: hidden;
+
+  white-space: nowrap;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.roadmap__slider::-webkit-scrollbar {
+  display: none;
+}
+
+.phase {
+  position: relative;
+  flex: none;
+  padding-top: 38px;
+
+  width: 352px;
+  height: 213px;
+
+  background-color: var(--article);
+
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+
+  border-radius: 20px;
+}
+
+.phase::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  transform: translate(-50%, -50%);
+
+  width: 430px;
+  height: 258.7px;
+  background-image: url("./images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.phase__title {
+  font-family: var(--nerko-one);
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1.21;
+  text-align: center;
+  color: var(--accent);
+}
+
+.phase__list {
+  margin-top: 6px;
+  padding-left: 74px;
+}
+
+@media screen and (min-width: 744px) {
+  body {
+    font-size: 18px;
+    line-height: 1.22;
+  }
+
+  .roadmap__container {
+    width: 744px;
+    height: 700px;
+    background-image: url("./images/background-tablet.svg");
+  }
+
+  .roadmap__title {
+    font-size: 48px;
+  }
+
+  .roadmap__title::after {
+    font-size: 100px;
+    line-height: 106%;
+  }
+
+  .roadmap__slider {
+    margin-top: 28px;
+    height: 295px;
+  }
+
+  .phase {
+    width: 407px;
+    height: 245px;
+  }
+
+  .phase::after {
+    width: 490px;
+    height: 295px;
+  }
+
+  .phase__title {
+    font-size: 32px;
+    line-height: 1.22;
+  }
+
+  .phase__list {
+    padding-left: 78px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    font-size: 24px;
+    line-height: 1.21;
+  }
+
+  .roadmap__container {
+    width: 1440px;
+    height: 800px;
+    padding-top: 120px;
+    background-image: url("./images/background-desktop.svg");
+  }
+
+  .roadmap__title {
+    font-size: 64px;
+  }
+
+  .roadmap__title::after {
+    top: -78px;
+    font-size: 140px;
+    line-height: 106.7%;
+  }
+
+  .roadmap__slider {
+    margin-top: 28px;
+    height: 364px;
+    gap: 145px;
+  }
+
+  .phase {
+    width: 500px;
+    height: 280px;
+  }
+
+  .phase::after {
+    width: 605px;
+    height: 364px;
+  }
+
+  .phase__title {
+    font-size: 48px;
+    line-height: 1.2;
+  }
+
+  .phase__list {
+    margin-top: 8px;
+    padding-left: 85px;
+  }
 }
